--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
         "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "spatie/laravel-permission": "^3.17",
-        "guzzlehttp/guzzle": "^7.0"
+        "spatie/laravel-permission": "3.17.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "laravel/ui": "1.*",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5"
